--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Egyptian-decorative-art-b-A-course-of-lectures-delivered-at-the-Royal-Institution_70049
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70049-h/images/cover.jpg
 creator:
   author:
     agent_name: Petrie, W. M. Flinders (William Matthew Flinders)
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/2454
     wikipedia: https://en.wikipedia.org/wiki/William_Matthew_Flinders_Petrie
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70049#Egyptian-decorative-art-b-A-course-of-lectures-delivered-at-the-Royal-Institution
 gutenberg_issued: '2023-02-16'
 identifiers:
   gutenberg: '70049'
